tetree and octree fixes/etc (#18)
* fix Tetree.locate.  Add comprehensive tesing around this function

Add the paper on the tetrahedral space filiing curve.

* base morton curve on ibmorton

* fix toLevel

Geebus

* perfing

* comprehensive testing to ensure quality

* Add comprehensive tests for Tet spatial operations and implement core spatial query methods

* Refine Tet spatial operations and add tests for edge cases. Improve coordinate calculations and address ambiguity in transformations.

* Refactor Tetree range merging and improve method naming consistency. Update tests to reflect changes.

* odd type inference glitch in the matrix